[package]
name = "jupiter-contract"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/gballet/jupiter-contract"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
edition = "2018"
description = "The jupiter contract"

[dependencies]
multiproof-rs = "^0.1.8" 
rlp = "0.4.4"
jupiter-account = "^0.1.8"
libsecp256k1 = "0.3.5"
sha3 = "0.8.2"

[lib]
crate-type = ["cdylib"]
